# taxi_demand_predictor

./: .bash_profile  pyproject.toml
data/transformed/: ts_data_2022_01.parquet
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visulaize_training_data.ipynb  06_baseline_model.ipynb  07_XGBoost_model.ipynb  08_Lightgbm_model.ipynb  09_lightgbm_mdoel_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb
src/: data.py
