[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
requests = "^2.28.2"
pyarrow = "^11.0.0"
fastparquet = "^2023.2.0"
plotly = "^5.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
